--- a/web-app/browser/index.html
+++ b/web-app/browser/index.html
@@ -14,6 +14,11 @@
 </header>
 
 <aside>
+        <h2>Next Tetromino:</h2>
+        <div id = "next_tertromino_grid" class="minigrid"> </div>
+        <h2>Held Tetromino:</h2>
+        <div id = "held_tertromino_grid" class="minigrid"> </div>    
+
 </aside>
 
 <main>
